# DoomsdayModel

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
asset_pipeline/: __init__.py  config.py  prompts.py
asset_pipeline/processing/: __init__.py  cleanup.py  dither.py  export.py  palette_reduce.py  pixelize.py  resize.py
asset_pipeline/providers/: __init__.py  base.py  diffusers_sdxl.py  mock_provider.py
asset_pipeline/sprites/: __init__.py  packer.py  particles.py
assets_source/palettes/: doomsday_ash_palette.json  doomsday_evening_palette.json  doomsday_fire_palette.json  doomsday_recovery_palette.json
public/assets/: manifest.json
scripts/: build_manifest.py  build_spritesheet.py  derive_state_variant.py  export_web_assets.py  generate_assets.py  generate_fx_assets.py  generate_master_alive.py  generate_world_plate.py  list_candidates.py  pixelize.py  pixelize_state_variants.py  preview_contact_sheet.py  preview_state_transition.py  reject_asset.py  select_asset.py  validate_assets.py
src/: App.jsx  main.jsx  styles.css
src/components/: DashboardUI.jsx  DomainCard.jsx  EventFeed.jsx  Logo.jsx  MainClock.jsx  PixelParticles.jsx  WorldScene.jsx
